overflow fix for mobile

--- a/css/sweetalert.css
+++ b/css/sweetalert.css
@@ -1032,22 +1032,26 @@ body.stop-scrolling {
 	img.rubik {
 		margin-left: -75px;
 		z-index: 1;
+		overflow: hidden;
 	}
 	img.iphone {
 		margin-right: -132px;
 		margin-top:-100px;
 		z-index: 1;
+		overflow: hidden;
 	}
 	img.ezbutton {
 		margin-right: -65px;
 		margin-top: 25px;
 		z-index: 1;
+		overflow: hidden;
 	}
 
 	img.snes {
 		margin-left: -113px;
 		margin-top:-100px;
 		z-index: 1;
+		overflow: hidden;
 	}
 
 	hr.desk:after{
